move Cognito & S3 to shared resource

--- a/nested_stacks/container_repo/containers/fluent-bit/fluent-bit.conf
+++ b/nested_stacks/container_repo/containers/fluent-bit/fluent-bit.conf
@@ -1,6 +1,9 @@
 [SERVICE]
     Flush 5
     Log_Level info
+    HTTP_Server On
+    HTTP_Listen 0.0.0.0
+    HTTP_PORT 2020
     storage.path /tmp/
     storage.backlog.mem_limit 5M
 
