--- a/nested_stacks/datalake/template.yaml
+++ b/nested_stacks/datalake/template.yaml
@@ -6,24 +6,17 @@ Parameters:
   ParentStackName:
     Type: String
 
+  AlarmTopic:
+    Type: String
+
+  Bucket:
+    Type: String
+
   TweetStreamArn:
     Description: Source Kinesis Data Stream
     Type: String
 
 Resources:
-
-  Bucket:
-    Type: AWS::S3::Bucket
-    Properties:
-      PublicAccessBlockConfiguration:
-        BlockPublicAcls: true
-        IgnorePublicAcls: true
-        BlockPublicPolicy: true
-        RestrictPublicBuckets: true
-      BucketEncryption:
-        ServerSideEncryptionConfiguration:
-          - ServerSideEncryptionByDefault:
-              SSEAlgorithm: "AES256"
 
   BackupStream:
     Type: AWS::KinesisFirehose::DeliveryStream
@@ -33,11 +26,12 @@ Resources:
         KinesisStreamARN: !Ref TweetStreamArn
         RoleARN: !GetAtt BackupStreamRole.Arn
       ExtendedS3DestinationConfiguration:
-        BucketARN: !GetAtt Bucket.Arn
+        #BucketARN: !GetAtt Bucket.Arn
+        BucketARN: !Sub 'arn:aws:s3:::${Bucket}'
         BufferingHints:
           IntervalInSeconds: 300
           SizeInMBs: 10
-        Prefix: 'tweet_raw/year=!{timestamp:yyyy}/month=!{timestamp:MM}/day=!{timestamp:dd}/hour=!{timestamp:HH}/'
+        Prefix: 'data/tweet_raw/year=!{timestamp:yyyy}/month=!{timestamp:MM}/day=!{timestamp:dd}/hour=!{timestamp:HH}/'
         ErrorOutputPrefix: 'FirehoseFailures/!{firehose:error-output-type}/year=!{timestamp:yyyy}/month=!{timestamp:MM}/day=!{timestamp:dd}/hour=!{timestamp:HH}/'
         CompressionFormat: 'UNCOMPRESSED'
         RoleARN: !GetAtt BackupStreamRole.Arn
@@ -78,9 +72,12 @@ Resources:
                   - s3:ListBucketMultipartUploads
                   - s3:PutObject
                 Resource:
-                  - !Sub '${Bucket.Arn}'
-                  - !Sub '${Bucket.Arn}/tweet_raw/*'
-                  - !Sub '${Bucket.Arn}/FirehoseFailures/*'
+                  - !Sub 'arn:aws:s3:::${Bucket}'
+                  - !Sub 'arn:aws:s3:::${Bucket}/data//tweet_raw/*'
+                  - !Sub 'arn:aws:s3:::${Bucket}/FirehoseFailures/*'
+                  #- !Sub '${Bucket.Arn}'
+                  #- !Sub '${Bucket.Arn}/tweet_raw/*'
+                  #- !Sub '${Bucket.Arn}/FirehoseFailures/*'
               - Effect: Allow
                 Action:
                   - logs:CreateLogGroup
@@ -141,7 +138,7 @@ Resources:
           - Name: day
             Type: string
         StorageDescriptor:
-          Location: !Sub 's3://${Bucket}/tweet_archived'
+          Location: !Sub 's3://${Bucket}/data/tweet_archived'
           InputFormat: org.apache.hadoop.mapred.TextInputFormat
           OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
           Compressed: False
@@ -264,7 +261,7 @@ Resources:
           - Name: hour
             Type: string
         StorageDescriptor:
-          Location: !Sub 's3://${Bucket}/tweet_raw'
+          Location: !Sub 's3://${Bucket}/data/tweet_raw'
           InputFormat: org.apache.hadoop.mapred.TextInputFormat
           OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
           Compressed: False
@@ -384,7 +381,7 @@ Resources:
           - Name: day
             Type: string
         StorageDescriptor:
-          Location: !Sub 's3://${Bucket}/tweet_crawled'
+          Location: !Sub 's3://${Bucket}/data/tweet_crawled'
           InputFormat: org.apache.hadoop.mapred.TextInputFormat
           OutputFormat: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
           Compressed: False
@@ -449,8 +446,10 @@ Resources:
               - Effect: Allow
                 Action: 's3:*'
                 Resource:
-                  - !Sub '${Bucket.Arn}'
-                  - !Sub '${Bucket.Arn}/*'
+                  - !Sub 'arn:aws:s3:::${Bucket}'
+                  - !Sub 'arn:aws:s3:::${Bucket}/*'
+                  #- !Sub '${Bucket.Arn}'
+                  #- !Sub '${Bucket.Arn}/*'
 
   TweetArchiveJob:
     Type: AWS::Glue::Job
@@ -470,7 +469,7 @@ Resources:
         "--job-language": "python"
         "--SRC_DB_NAME": !Ref DataLakeDB
         "--SRC_TABLE_NAME": !Ref TweetStreamTable
-        "--DEST_S3_PATH": !Sub 's3://${Bucket}/tweet_archived'
+        "--DEST_S3_PATH": !Sub 's3://${Bucket}/data/tweet_archived'
       MaxCapacity: 2
       MaxRetries: 0
       ExecutionProperty:
@@ -500,7 +499,7 @@ Resources:
       ExecutionProperty:
         MaxConcurrentRuns: 1
 
-Outputs:
+Outputs: {}
 
-  Bucket:
-    Value: !Ref Bucket
+#  Bucket:
+#    Value: !Ref Bucket
