--- a/nested_stacks/twitter_producer/template.yaml
+++ b/nested_stacks/twitter_producer/template.yaml
@@ -6,6 +6,9 @@ Parameters:
   ParentStackName:
     Type: String
 
+  AlarmTopic:
+    Type: String
+
   VpcId:
     Type: String
   
@@ -20,6 +23,14 @@ Parameters:
 
   FluentBitImage:
     Type: String
+
+  CloudWatchAgentImage:
+    Type: String
+    Default: amazon/cloudwatch-agent:1.247346.0b249609
+
+  PlatformVersion:
+    Type: String
+    Default: 1.4.0
 
   TwitterTopicsParameter:
     Type: String
@@ -36,12 +47,6 @@ Parameters:
   TwitterAccessTokenSecret:
     Type: String
 
-  ComprehendEntityScoreThreshold:
-    Type: Number
-    Default: 0.8
-    MaxValue: 1
-    MinValue: 0
-
 Resources:
 
   SecurityGroup:
@@ -56,7 +61,53 @@ Resources:
         - CidrIp: 0.0.0.0/0
           IpProtocol: "-1"
 
-  TaskRole:
+  SecurityGroupIngress:
+   Type: 'AWS::EC2::SecurityGroupIngress'
+   Properties:
+      Description: Fluent-Bit Prometheus Metrics
+      GroupId: !GetAtt SecurityGroup.GroupId
+      IpProtocol: tcp
+      FromPort: 2020
+      ToPort: 2020
+      SourceSecurityGroupId: !GetAtt SecurityGroup.GroupId
+
+  TaskExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: sts:AssumeRole
+      Path: '/'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
+        - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
+        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
+      Policies:
+        - PolicyName: GetSecrets
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 'secretsmanager:GetSecretValue'
+                Resource:
+                  - !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${ParentStackName}/*'
+
+  Cluster:
+    Type: AWS::ECS::Cluster
+
+  # Twitter Producer
+  TwitterProducerLogGroup: 
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/${ParentStackName}/ecs/twitter-stream-producer'
+      RetentionInDays: 30
+
+  TwitterProducerTaskRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
@@ -82,54 +133,19 @@ Resources:
                 Resource:
                   - !Sub 'arn:${AWS::Partition}:kinesis:${AWS::Region}:${AWS::AccountId}:stream/${TweetStreamName}'
 
-  TaskExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Version: '2012-10-17'
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: ecs-tasks.amazonaws.com
-            Action: sts:AssumeRole
-      Path: '/'
-      ManagedPolicyArns:
-        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
-      Policies:
-        - PolicyName: get-parameters-and-secrets
-          PolicyDocument:
-            Version: '2012-10-17'
-            Statement:
-              - Effect: Allow
-                Action:
-                  - 'ssm:GetParameters'
-                  - 'secretsmanager:GetSecretValue'
-                Resource:
-                  - !Sub 'arn:${AWS::Partition}:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${ParentStackName}/*'
-                  - !Sub 'arn:${AWS::Partition}:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${ParentStackName}/*'
-
-  EcsLogGroup: 
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Sub '/${ParentStackName}/twitter/ecs'
-      RetentionInDays: 14
-
-  EcsCluster:
-    Type: AWS::ECS::Cluster
-
-  TaskDef: 
+  TwitterProducerTaskDef: 
     Type: AWS::ECS::TaskDefinition
     Properties:
       Family: twitter-stream-producer
       RequiresCompatibilities: 
         - "FARGATE"
       NetworkMode: awsvpc
-      Cpu: "256"
-      Memory: "512"
-      TaskRoleArn: !Ref TaskRole
+      Cpu: '256'
+      Memory: '512'
+      TaskRoleArn: !Ref TwitterProducerTaskRole
       ExecutionRoleArn: !Ref TaskExecutionRole
       ContainerDefinitions: 
-        - Name: twitter-stream-producer
+        - Name: twitter-producer
           Image: !Ref TwitterProducerImage
           Essential: "true"
           DependsOn:
@@ -154,12 +170,15 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
+              awslogs-group: !Ref TwitterProducerLogGroup
               awslogs-region: !Ref AWS::Region
-              awslogs-group: !Ref EcsLogGroup
-              awslogs-stream-prefix: twitter-producer
+              awslogs-stream-prefix: stdout
         - Name: fluent-bit
           Image: !Ref FluentBitImage
           Essential: "true"
+          PortMappings:
+            - ContainerPort: 2020
+              Protocol: tcp
           Environment:
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
@@ -168,24 +187,187 @@ Resources:
           LogConfiguration:
             LogDriver: awslogs
             Options:
+              awslogs-group: !Ref TwitterProducerLogGroup
               awslogs-region: !Ref AWS::Region
-              awslogs-group: !Ref EcsLogGroup
-              awslogs-stream-prefix: fluent-bit
+              awslogs-stream-prefix: stdout
 
-  EcsService:
+  TwitterProducerSvc:
     Type: AWS::ECS::Service
     Properties:
-      Cluster: !Ref EcsCluster
+      Cluster: !Ref Cluster
       DesiredCount: 2
       LaunchType: FARGATE
-      PlatformVersion: 1.4.0
+      PlatformVersion: !Ref PlatformVersion
       NetworkConfiguration: 
         AwsvpcConfiguration:
           AssignPublicIp: ENABLED
           SecurityGroups:
             - !Ref SecurityGroup
           Subnets: !Ref PublicSubnetList
-      TaskDefinition: !Ref TaskDef
+      TaskDefinition: !Ref TwitterProducerTaskDef
 
-Outputs: {}
+  # CloudWatch Prometheus
+  CloudWatchAgentLogGroup: 
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/${ParentStackName}/ecs/cloudwatch-prometheus'
+      RetentionInDays: 30
+  PrometheusLogGroup: 
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub '/aws/ecs/containerinsights/${Cluster}/prometheus'
+      RetentionInDays: 1
 
+  CloudWatchAgentTaskRole:
+    Type: AWS::IAM::Role
+    Properties:
+      Description: Allows ECS tasks to call AWS services on your behalf.
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+            Action: sts:AssumeRole
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
+        - arn:aws:iam::aws:policy/AWSXRayDaemonWriteAccess
+      Policies:
+        - PolicyName: ECSServiceDiscoveryInlinePolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ecs:DescribeTasks
+                  - ecs:ListTasks
+                  - ecs:DescribeContainerInstances
+                Resource: "*"
+              - Effect: Allow
+                Action:
+                  - ec2:DescribeInstances
+                  - ecs:DescribeTaskDefinition
+                Resource: "*"
+
+  CloudWatchAgentTaskDef:
+    Type: 'AWS::ECS::TaskDefinition'
+    Properties:
+      Family: 'cloudwatch-agent-prometheus'
+      RequiresCompatibilities:
+        - FARGATE
+      NetworkMode: awsvpc
+      Cpu: '256'
+      Memory: '512'
+      TaskRoleArn: !Ref CloudWatchAgentTaskRole
+      ExecutionRoleArn: !Ref TaskExecutionRole
+      ContainerDefinitions:
+        - Name: cloudwatch-agent
+          Image: !Ref CloudWatchAgentImage
+          Essential: true
+          MountPoints: []
+          PortMappings: []
+          Environment: []
+          Secrets:
+            - Name: PROMETHEUS_CONFIG_CONTENT
+              ValueFrom: !Ref PrometheusConfigParameter
+            - Name: CW_CONFIG_CONTENT
+              ValueFrom: !Ref CloudWatchAgentConfigParameter
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group: !Ref CloudWatchAgentLogGroup
+              awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: stdout
+
+  CloudWatchAgentSvc:
+    Type: AWS::ECS::Service
+    Properties:
+      Cluster: !Ref Cluster
+      DesiredCount: 1
+      LaunchType: FARGATE
+      PlatformVersion: !Ref PlatformVersion
+      TaskDefinition: !Ref CloudWatchAgentTaskDef
+      NetworkConfiguration: 
+        AwsvpcConfiguration:
+          AssignPublicIp: ENABLED
+          SecurityGroups:
+            - !Ref SecurityGroup
+          Subnets: !Ref PublicSubnetList
+
+  PrometheusConfigParameter:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: !Sub '/${ParentStackName}/CloudWatch/PrometheusConfig'
+      Type: String
+      Tier: Standard
+      Description: !Sub 'Prometheus Scraping SSM Parameter for ECS Cluster'
+      Value: |-
+        global:
+          scrape_interval: 1m
+          scrape_timeout: 10s
+        scrape_configs:
+          - job_name: cwagent-ecs-file-sd-config
+            sample_limit: 10000
+            file_sd_configs:
+              - files: [ "/tmp/cwagent_ecs_auto_sd.yaml" ]
+
+  CloudWatchAgentConfigParameter:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: !Sub '/${ParentStackName}/CloudWatch/CloudWatchAgentConfig'
+      Type: String
+      Tier: Intelligent-Tiering
+      Description: !Sub 'CloudWatch-Agent SSM Parameters with EMF Definition for ECS Cluster'
+      Value: !Sub |-
+        {
+          "logs": {
+            "metrics_collected": {
+              "prometheus": {
+                "log_group_name": "${PrometheusLogGroup}",
+                "prometheus_config_path": "env:PROMETHEUS_CONFIG_CONTENT",
+                "ecs_service_discovery": {
+                  "sd_frequency": "1m",
+                  "sd_result_file": "/tmp/cwagent_ecs_auto_sd.yaml",
+                  "docker_label": {
+                  },
+                  "task_definition_list": [
+                    {
+                      "sd_job_name": "ecs-fluent-bit",
+                      "sd_metrics_ports": "2020",
+                      "sd_task_definition_arn_pattern": ".*:task-definition/twitter-stream-producer:[0-9]+",
+                      "sd_metrics_path": "/api/v1/metrics/prometheus"
+                    }
+                  ]
+                },
+                "emf_processor": {
+                  "metric_declaration": [
+                    {
+                      "source_labels": ["StartedBy"],
+                      "label_matcher": "^ecs-svc/.*",
+                      "dimensions": [
+                        ["ClusterName", "TaskGroup", "name"],
+                        ["ClusterName", "TaskDefinitionFamily", "name"],
+                        ["ClusterName", "instance", "name"]
+                      ],
+                      "metric_selectors": [
+                        "^fluentbit_input_(records|bytes)_total$",
+                        "^fluentbit_output_proc_(records|bytes)_total$",
+                        "^fluentbit_output_errors_total$",
+                        "^fluentbit_output_retries_(total|failed_total)$"
+                      ]
+                    }
+                  ]
+                }
+              }
+            },
+            "force_flush_interval": 5
+          }
+        }
+
+Outputs:
+
+  ClusterName:
+    Value: !Ref Cluster
+
+  ServiceName:
+    Value: !GetAtt TwitterProducerSvc.Name
