--- a/nested_stacks/twitter_producer/template.yaml
+++ b/nested_stacks/twitter_producer/template.yaml
@@ -26,7 +26,7 @@ Parameters:
 
   CloudWatchAgentImage:
     Type: String
-    Default: amazon/cloudwatch-agent:1.247346.0b249609
+    Default: amazon/cloudwatch-agent:latest
 
   PlatformVersion:
     Type: String
