--- a/nested_stacks/elasticsearch/template.yaml
+++ b/nested_stacks/elasticsearch/template.yaml
@@ -91,8 +91,8 @@ Resources:
       Environment:
         Variables:
           LOG_LEVEL: INFO
-          POWERTOOLS_SERVICE_NAME: Indexing
           POWERTOOLS_METRICS_NAMESPACE: Lambda/Custom
+          POWERTOOLS_SERVICE_NAME: IndexingFunction
           ELASTICSEARCH_HOST: !GetAtt Elasticsearch.DomainEndpoint
       Events:
         Stream:
